# pi-infrastructure

./: .gitignore  .windsurfrules  BUILD.bazel  MODULE.bazel  README.md  deps.go  go.mod  go.sum
.github/workflows/: npm-lint.yaml  testing-meals-go.yaml
ansible/: .gitignore  Makefile  README.md  main-playbook.yml
ansible/roles/artifactors/tasks/: main.yml  nexus.yml
ansible/roles/common/tasks/: docker-install.yml  iperf3-install.yml  main.yml  node_exporter-install.yml  prometheus-install.yml  ssh-setup.yml
ansible/roles/common/templates/: prometheus.yml.j2
ansible/roles/primary/tasks/: main.yml  nexus.yml  prometheus-install.yml
ansible/roles/primary/templates/: nexus-docker-compose.yml.j2  prometheus.yml.j2
ansible/roles/workers/tasks/: install-k3s-agent.yml  main.yml
ansible/roles/workers/templates/: k3s-run.sh
build_tools/apt/: BUILD.bazel  bookworm.lock.json  bookworm.yaml  wkhtmltopdf_rules.bzl
build_tools/gofmt/: check_gofmt.sh
build_tools/golangci-lint/: BUILD.bazel  run_golangci-lint.sh
containers/: README.md
containers/flight-tracker-go/: .dockerignore  BUILD.bazel  Dockerfile  Makefile  README.md  go.mod  main.go  main_test.go
containers/garage-go/: BUILD.bazel  Dockerfile  README.md  go.mod  go.sum  main.go
containers/meals/: Dockerfile  README.md  recipe-maker.py
containers/meals-frontend/: .dockerignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  setup-node.sh  svelte.config.js
containers/meals-frontend/src/: app.html
containers/meals-frontend/src/lib/: CalendarMonth.svelte  EmailMealItem.svelte  EnableMeals.svelte  ExtraItems.svelte  Header.svelte  MealsEmail.svelte  MealsList.svelte  Navbar.svelte  StatusIndicator.svelte  const.ts  token-utils.ts  types.ts
containers/meals-frontend/src/lib/data/: calendar.json  meals.json
containers/meals-frontend/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
containers/meals-frontend/src/routes/api/calendar/: +server.ts
containers/meals-frontend/src/routes/api/email/: +server.ts
containers/meals-frontend/src/routes/api/enable/: +server.ts
containers/meals-frontend/src/routes/api/items/update/: +server.ts
containers/meals-frontend/src/routes/api/login/: +server.ts
containers/meals-frontend/src/routes/api/update/: +server.ts
containers/meals-frontend/src/routes/email/: +page.server.ts  +page.svelte
containers/meals-frontend/src/routes/enable/: +error.svelte  +page.svelte
containers/meals-frontend/src/routes/extras/: +page.server.ts  +page.svelte
containers/meals-frontend/src/routes/health/: +server.ts
containers/meals-frontend/src/routes/login/: +page.server.ts  +page.svelte
containers/meals-frontend/src/routes/update/: +error.svelte  +page.server.ts  +page.svelte
containers/meals-go/: .dockerignore  .gitignore  BUILD.bazel  Dockerfile  Makefile  README.md  compose.yml  go.mod  go.sum  main.go
containers/meals-go/calendar/: BUILD.bazel  calendar.go  calendar_test.go
containers/meals-go/config/: BUILD.bazel  config.go
containers/meals-go/data/: BUILD.bazel  recipes.json  recipes_with_unknown_field.json
containers/meals-go/meal_backend/: BUILD.bazel  auth.go  meal_backend.go  migrate.go
containers/meals-go/meal_calendar/: BUILD.bazel  meal_calendar.go  meal_calendar_server.go  meal_calendar_test.go
containers/meals-go/meal_collection/: BUILD.bazel  db_interactions.go  meal_collection.go  meal_collection_test.go
containers/meals-go/meal_db_sync/: BUILD.bazel  meal_db_sync.go
containers/meals-go/meal_email/: BUILD.bazel  email_sender.go  gmail_interactions.go  meal_email.go  meal_email_test.go  pdf.go
containers/meals-go/migrations/: 001_create_recipes_table.up.sql  002_create_item_table.up.sql  003_add_enabled_to_item.down.sql  003_add_enabled_to_item.up.sql
containers/nexus/: Dockerfile  README.md
containers/ops/: BUILD.bazel  Makefile  update-pods.sh
containers/ops/deploy-images/: BUILD.bazel  deployer_test.go  go.mod  main.go  main_test.go
nexus/: README.md
terraform/: .gitignore
terraform/nexus/: .terraform.lock.hcl  README.md  main.tf  variables.tf
tools/gofmt/: BUILD.bazel  check_gofmt.sh
tools/golangci-lint/: run_golangci-lint.sh
