module(name = "pi-infrastructure")

bazel_dep(name = "rules_go", version = "0.55.1")
bazel_dep(name = "gazelle", version = "0.40.0")
bazel_dep(name = "rules_pkg", version = "1.1.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_distroless", version = "0.5.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.7.2")
bazel_dep(name = "rules_oci", version = "2.2.6")

# Go
go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.23.11")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(
    go_deps,
    "com_github_aws_aws_sdk_go_v2",
    "com_github_aws_aws_sdk_go_v2_config",
    "com_github_aws_aws_sdk_go_v2_service_s3",
    "com_github_aws_aws_sdk_go_v2_service_ses",
    "com_github_gin_contrib_cors",
    "com_github_gin_gonic_gin",
    "com_github_golang_jwt_jwt_v5",
    "com_github_golang_migrate_migrate_v4",
    "com_github_jackc_pgx_v5",
    "com_github_knadh_koanf_parsers_yaml",
    "com_github_knadh_koanf_providers_file",
    "com_github_knadh_koanf_v2",
    "com_github_lib_pq",
    "com_github_prometheus_client_golang",
    "com_github_sebastiaanklippert_go_wkhtmltopdf",
    "com_github_stianeikeland_go_rpio_v4",
    "org_golang_x_exp",
)

# Images
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "chainguard_static",
    digest = "sha256:93b70336be10c325d5a96016971b71b38d8e79e5148af2144f2aae93ee9367c3",
    image = "cgr.dev/chainguard/static",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
oci.pull(
    name = "chainguard_gcc_glibc",
    digest = "sha256:3a45fcb3aa750f2564cc188b3aa2926c3790142594822dee0c16c2e72d8ff326",
    image = "cgr.dev/chainguard/gcc-glibc",
    platforms = [
        "linux/amd64",
        "linux/arm64",
    ],
)
use_repo(oci, "chainguard_static", "chainguard_static_linux_amd64", "chainguard_static_linux_arm64")
use_repo(oci, "chainguard_gcc_glibc", "chainguard_gcc_glibc_linux_amd64", "chainguard_gcc_glibc_linux_arm64")

apt = use_extension("@rules_distroless//apt:extensions.bzl", "apt")
apt.install(
    name = "bookworm",
    lock = "@@//build_tools/apt:bookworm.lock.json",
    manifest = "//build_tools/apt:bookworm.yaml",
)
use_repo(apt, "bookworm")
