load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    importpath = "github.com/andrewpollack/pi-infrastructure/containers/meals-go/config",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_knadh_koanf_parsers_yaml//:yaml",
        "@com_github_knadh_koanf_providers_file//:file",
        "@com_github_knadh_koanf_v2//:koanf",
    ],
)
