load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "meal_collection",
    srcs = [
        "db_interactions.go",
        "meal_collection.go",
    ],
    importpath = "github.com/andrewpollack/pi-infrastructure/containers/meals-go/meal_collection",
    visibility = ["//visibility:public"],
    deps = [
        "//containers/meals-go/calendar",
        "@com_github_aws_aws_sdk_go_v2//aws",
        "@com_github_aws_aws_sdk_go_v2_config//:config",
        "@com_github_aws_aws_sdk_go_v2_service_s3//:s3",
        "@com_github_jackc_pgx_v5//:pgx",
        "@org_golang_x_exp//rand",
    ],
)

go_test(
    name = "meal_collection_test",
    srcs = ["meal_collection_test.go"],
    data = [
        "//containers/meals-go/data:recipes.json",
        "//containers/meals-go/data:recipes_with_unknown_field.json",
    ],
    embed = [":meal_collection"],
    deps = ["//containers/meals-go/calendar"],
)
