load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "deploy-images_lib",
    srcs = ["main.go"],
    importpath = "github.com/andrewpollack/pi-infrastructure/containers/ops/deploy-images",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "deploy-images",
    embed = [":deploy-images_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "deploy-images_test",
    srcs = ["deployer_test.go"],
    embed = [":deploy-images_lib"],
)
